style: fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   width: 100%;
   height: 100vh;
   background: linear-gradient(120deg, #252525, #444);
+  overflow: hidden;
 }
